--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@
   img{
     max-width:100%;
   }
-  li{list-style-type: none;}
+  li{
+    list-style-type: none;
+  }
   .singleDisk{
-    max-width:100%;
+    max-height:200px;
+    max-width:200px;
   }
